# Raab-bot

./: CMakeLists.txt  CPPLINT.cfg  LICENSE.md  README.md  build.sh  main.cpp
.github/: codecov.yml
.github/workflows/: cmake-macos-latest.yml  cmake-multi-platform.yml  cmake-ubuntu-latest.yml  cmake-windows-latest.yml  code-style.yml  codecov.yml
data/: error  v0.1.0.1-errors
include/: Board.h  Eval.h  Game_State.h  Node.h  Search.h  Square.h  UCI.h
src/: Board.cpp  Board.hpp  Eval.cpp  Evaluator.hpp  FEN.hpp  Game_State.cpp  Game_State.hpp  Implied_Tree.cpp  Move-and-rules.hpp  Node.cpp  Search.cpp  Square.cpp  Square.hpp  Tree.hpp  UCI.cpp  bitboard.h  boundary-detection.hpp  main.cpp  search.hpp  tree.hpp  uci.hpp
test/: 10moves.pgn  CMakeLists.txt  basic-moves-test.cxx  bitboard.cxx  error  evaluation-test.cxx  general.cxx  illegal.txt  implied-tree.cxx  influence-map-test.cxx  influence-test.cxx  legal-moves-test.cxx  move-block-or-capture.cxx  movement.cxx  other-moves-test.cxx  pawn error  pinned-pieces-test.cxx  scratch.cxx  search-test.cxx  tree-test.cxx  uci-test.cxx  under_attack.cxx
test/basic/: basic-moves-test.cxx  general.cxx  influence-test.cxx  move-block-or-capture.cxx  pinned-pieces-test.cxx  sample-game.cxx
test/board/: basic-moves-test.cxx  general.cxx  influence-test.cxx  move-block-or-capture.cxx  pinned-pieces-test.cxx  sample-game.cxx
test/other/: evaluation-test.cxx  implied-tree-test.cxx  other-moves-test.cxx  pawns-test.cxx  search-test.cxx  stacked-pawns-test.cxx  stalemate-test.cxx  system-test.cxx  uci-test.cxx
